fix(web/Little Lemon Restaurant):Big fix Images Routers Style Mobile Menu

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       name="og:description"
       content="Website for little Lemon Restaurant"
     />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="og:title" content="Little Lemon restaurant"/>
     <meta name="og:image" content=""/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
