fix(web/Little Lemon Restaurant):Change The name of site

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="og:title" content="Little Lemon restaurant"/>
-    <meta name="og:image" content=""/>
+    <meta name="og:image" content="%PUBLIC_URL%/logo192.png"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script>
     <!--
